--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,25 @@ h1 {
 }
 
 h2 {
-  font-size: 60px;
+  font-size: 80px;
   font-weight: 900;
   color: #000;
+  position: relative;
+  right: 70px;
+  bottom: 40px;
+}
+
+.temperatureIcon {
+  right: 140px;
+  top: 40px;
+}
+
+
+.temperatureDegree {
+  position: relative;
+  top: -135px;
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .weekDays {
